<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Control Precios Cuidados</string>
    <string name="title_activity_denuncia_foto">DenunciaFoto</string>
    <string name="cual_es_tu_denuncia">¿Cual es tu Denuncia?</string>
    <string name="en_donde_est_s">¿En donde estás?</string>
    <string name="cancelar">Cancelar</string>
    <string name="listo">Listo</string>
    <string name="escrib_el_lugar">Escribí el lugar</string>
    <string name="escrib_tu_denuncia">Escribí tu Denuncia</string>
    <string name="denuncia_sin_foto">Denuncia Sin Foto</string>
    <string name="mira_las_denuncias">Mira las denuncias</string>

    <string name="todo">TODO</string>
    <string name="disclamer">Para poder publicar tu denuncia necesitamos conectar tu cuenta de twitter a nuestra App. Podes hacerlo ahora o más adelante desde el menu de la página principal. Más adelante esperamos poder ofrecerte mejores opciones y otras redes para publicar tus denuncias.</string>
    <string name="tu_denuncia">Tu Denuncia</string>
    <string name="enviar_por_tweeter">Compartir Denuncia</string>
    <string name="textview">TextView</string>
    <string name="complet_tu_denuncia">Completá Tu Denuncia</string>
    <string name="ingresa_tu_denuncia">Ingresa tu Denuncia</string>
    <string name="producto_faltante">Producto Faltante</string>
    <string name="no_respeta_precio">No Respeta Precio</string>
    <string name="gondola_mal_se_alizada">Gondola Mal Señalizada</string>
    <string name="lugar_de_la_denuncia">Lugar de la Denuncia</string>
    <string name="ingresa_el_supermercado_o_lugar_que_vas_a_denunciar">- Ingresa el supermercado o lugar que vas a denunciar.</string>
    <string name="ingrese_texto">Ingrese Texto</string>
    <string name="ingrese_el_producto">Ingrese el Producto</string>
    <string name="otra_denuncia">Otra Denuncia</string>
    <string name="ingresa_la_denuncia">Ingresa La Denuncia</string>

    <string name="banner_ad_unit_id">ca-app-pub-2600751459304159~5853746422</string>
    <string name="aoutus">Esta Aplicación nace de ver la necesidad de la gente de poder aceder a productos de necesidad basica a precios justos.\n\n
        De poder conocer y acceder al listado completo de los Precios Cuidados, y los Precios Esenciales \n \n

De poder generar un canal de denuncias unificado, para que el volumen de la información haga que no se puedan ignorar nuestras denuncias, que no puedan hacer como que no existen. Porque creo que la avaricia no puede ser más importante que el hambre.\n\n

Esta App esta todavía en etapa de desarrollo, a medida que vayan pasando los días voy a ir agregando y mejorando las funciones de la app. Tambien planeo agregar otras redes sociales para que cada denuncia pueda ser escuhada.\n\n

Te pido disculpas si todavía no funciona lo bien que debería, poco a poco espero ir corriegiendo todos los errores. Si detectas un error y queres hacermelo saber, o si se te ocurre cualquier sugerencia para poder mejorar esta app; Por favor mandame un mail a la dirección de abajo. Que ni bien pueda lo voy a contestar.\n\n

Muchas Gracias!\n
FC Apps\n

</string>
    <string name="listado_precios_acordados">Lista Precios Cuidados\n Y Productos Esenciales</string>
    <string name="denuncia_con_foto">Denuncia Con Foto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
